--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>cool.scx</groupId>
     <artifactId>scx-http</artifactId>
-    <version>4.3.0</version>
+    <version>4.5.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>SCX HTTP</name>
@@ -108,11 +108,25 @@
 
         <!-- *********************** 以下为依赖包版本 *********************** -->
         <scx-collections.version>0.0.1</scx-collections.version>
-        <scx-common.version>4.3.0</scx-common.version>
-        <scx-io.version>4.3.0</scx-io.version>
-        <scx-object.version>2.0.0</scx-object.version>
+        <scx-common.version>4.5.0-SNAPSHOT</scx-common.version>
+        <scx-io.version>4.5.0-SNAPSHOT</scx-io.version>
+        <scx-object.version>4.5.0-SNAPSHOT</scx-object.version>
         <testng.version>7.11.0</testng.version>
 
     </properties>
+
+    <repositories>
+        <repository>
+            <name>Central Portal Snapshots</name>
+            <id>central-portal-snapshots</id>
+            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
 </project>
